<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.FieldsActivity"
    tools:showIn="@layout/activity_fields">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btn_req"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:lines="1"
                    android:text="@string/add_requirement"
                    />
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:lines="3"
                    android:text="person_registration"
                    android:textSize="20dp" />


            </LinearLayout>
            <!--  <TextView
                  android:id="@+id/camp_title"
                  android:layout_marginTop="20dp"
                  android:layout_width="wrap_content"
                  android:layout_below="@+id/title"
                  android:layout_height="wrap_content"
                  android:text="@string/camp_name"
                  android:textStyle="bold"
                  />

               <Spinner
                  android:id="@+id/camp_spinner"
                  android:layout_below="@+id/camp_title"
                  android:layout_marginTop="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

              </Spinner> -->
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/title_container"

                android:layout_marginTop="20dp"
                android:hint="Name"
                android:singleLine="true" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="20dp"
                android:hint="@string/mobile"
                android:inputType="number" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile"
                android:layout_marginTop="20dp"
                android:hint="Age"
                android:inputType="number" />

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age"
                android:layout_marginTop="20dp"
                android:text="@string/gender"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender_title"
                android:layout_marginTop="10dp"></Spinner>

            <TextView
                android:id="@+id/district_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_marginTop="20dp"
                android:text="@string/district"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/district_title"
                android:layout_marginTop="20dp"></Spinner>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/district"
                android:layout_marginTop="20dp"
                android:hint="@string/address" />


            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/address"
                android:inputType="textMultiLine"
                android:layout_marginTop="20dp"
                android:hint="@string/note" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/note"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/syncDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="99 Pending - 100 synced" />
</RelativeLayout>